--- a/v3/src/js/views/timetable/TimetableTimings.scss
+++ b/v3/src/js/views/timetable/TimetableTimings.scss
@@ -21,6 +21,7 @@
   padding: 0;
   margin: $timetable-day-v-size 0 0 0;
   text-align: right;
+  background: rgba($body-bg, 0.7);
   pointer-events: none;
 
   @include media-breakpoint-up(sm) {
@@ -34,8 +35,7 @@
 
 :global(.verticalMode) .time {
   display: inline-block;
-  padding: 0 0.25rem 0 0.1rem;
-  border-radius: 0 0.2rem 0.2rem 0;
+  padding: 0.1rem 0.2rem;
   background: rgba($body-bg, 0.75);
-  transform: translateY(-50%);
+  transform: none;
 }
