--- a/v3/src/js/views/timetable/_variables.scss
+++ b/v3/src/js/views/timetable/_variables.scss
@@ -2,6 +2,7 @@
 
 $timetable-border: 1px solid $gray-lighter;
 
+$timetable-right-padding: 2vw;
 $timetable-day-h-size: 3.5rem;
 $timetable-day-h-size-sm: 1.5rem;
 $timetable-day-v-size: 2.5rem;
